--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mariadb": "^2.3.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7",
+    "validator": "^13.0.0",
     "yarn": "^1.22.4"
   }
 }
